@@ -45,7 +45,8 @@ require "___scriptsdir___/boot.pl";
 
 $name = "boot";
 $version = "0.1.0";
-@platforms = ("redhat-5.2", "redhat-6.0", "redhat-6.1", "redhat-6.2", "redhat-7.0");
+@platforms = ("redhat-5.2", "redhat-6.0", "redhat-6.1", "redhat-6.2", "redhat-7.0",
+              "mandrake-7.2", "debian-2.2");
 
 $description =<<"end_of_description;";
        Configures Boot manager (Only LILO at the moment).
