@@ -1,3 +1,13 @@
+2001-04-26  Arturo Espinosa Aldama  <arturo@ximian.com>
+
+	* boot-conf.in: Added mandrake-7.2 and debian-2.2 as supported platforms.
+	* disks-conf.in: Added mandrake-7.2 and debian-2.2 as supported platforms.
+	* memory-conf.in: Added mandrake-7.2 and debian-2.2 as supported platforms.
+	Some indentation corrections.
+	* print.pl.in: Escaped a couple of hashes that confused emacs.
+	* print-conf.in: Added mandrake-7.2 and debian-2.2 as supported platforms.
+	* users-conf.in: Added mandrake-7.2 and debian-2.2 as supported platforms.
+	
 2001-04-25  Arturo Espinosa Aldama  <arturo@ximian.com>
 
 	* filesys.pl.in (xst_filesys_translate_ext2_device_to_label):
